# credyx

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pytest.ini
.github/workflows/: test.yml
.playwright-mcp/: page-2026-05-14T12-35-38-062Z.yml  page-2026-05-14T12-36-52-073Z.yml  page-2026-05-14T12-37-22-216Z.yml  page-2026-05-14T18-48-46-640Z.yml  page-2026-05-14T18-49-23-440Z.yml  page-2026-05-14T18-51-09-791Z.yml  page-2026-05-14T18-52-08-805Z.yml  page-2026-05-14T18-53-08-978Z.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_users_subscriptions.py  0003_user_preferences.py
apps/api/app/: admin_routes.py  auth.py  auth_routes.py  billing.py  billing_routes.py  cache.py  config.py  db.py  feature_gate.py  logging_setup.py  main.py  rate_limit.py  routes.py  stripe_client.py  webhook_routes.py
apps/api/tests/: conftest.py  test_admin_routes.py  test_auth.py  test_billing_routes.py  test_feature_gate.py  test_preferences.py  test_routes.py
apps/web/: Dockerfile  middleware.ts  package-lock.json  package.json  playwright.config.ts  remotion.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
docs/: VALIDATION_MATRIX.md  VALIDATION_REPORT.md  architecture.md  validation_matrix.json
docs/countries/: al.md  am.md  ar.md  at.md  au.md  az.md  ba.md  bd.md  be.md  bg.md  bh.md  bo.md  br.md  bw.md  by.md  ca.md  cd.md  ch.md  cl.md  cm.md  (+87 more)
scripts/: gen_country_docs.py  seed_plans.py  validate.py  validate_all.py
(+164 files in other folders)
