[project]
name = "Credyx-api"
version = "0.1.0"
description = "Credyx FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pypdf>=4.3",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]
